Fix bug with scrollbar in layer list

--- a/base/src/layer-list-selector.css
+++ b/base/src/layer-list-selector.css
@@ -5,7 +5,7 @@
 	z-index: 1100;
 	width: 25em;
 	height: calc(100% - 215px - 2em);
-	overflow-y: auto;
+	overflow-y: hidden;
 	pointer-events: none;
 }
 
