--- a/base/src/layer-list.css
+++ b/base/src/layer-list.css
@@ -13,6 +13,8 @@
 	top: 0;
 	left: 0;
 	width: 100%;
+	max-height: 100%;
+	overflow-y: auto;
 }
 
 #all_layers table {
@@ -62,7 +64,7 @@ td.layer_visibility {
 
 .layer_name {
 	/* 	color: #FFF; */
-	
+
 }
 
 .layer_action {
